# pp-metrics

./: .hgignore  README.rst  setup.cfg  setup.py
docs/source/: conf.py
pp/metrics/: __init__.py  stats.py
pp/metrics/scripts/: main.py
pp/metrics/tests/: test_equalityinlieuofrealtest.py
