[metadata]
name = pp-metrics
version = 1.0.0
description =  pp-metrics
author = PythonPro Limited
author_email = everyone@pythonpro.co.uk
keywords =

classifiers =
    Topic :: Software Development :: Libraries
    Programming Language :: Python

install_requires =
    # Runtime dependencies
    pkglib
    scales
setup_requires =
    # Setup dependencies, usually empty.

tests_require =
    # Testing dependencies
    pytest-cov

console_scripts =
    metricsapp = pp.metrics.scripts.main:main

[egg_info]
# This adds the 'dev' marker to versions.
# This must conform to PEP-386:
# http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm
tag_build = .dev1

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
# This section sets configuration for all invocations of py.test,
# both standalone cmdline and running via setup.py
norecursedirs = .hg *.egg build dist

[nosetests]
match = ^test
nocapture = 1
cover-package = pp.metrics
with-coverage = 1
cover-erase = 1

